--- a/Modelos/Modelos.csproj
+++ b/Modelos/Modelos.csproj
@@ -43,6 +43,8 @@
     <Compile Include="Articles.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stores.cs" />
+    <Compile Include="ViewModel\articlesViewModel.cs" />
+    <Compile Include="ViewModel\storesViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
