Creacion de la Semilla Seed

--- a/APIs/API.csproj
+++ b/APIs/API.csproj
@@ -129,6 +129,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\APIsContext.cs" />
+    <Compile Include="Models\DatabaseInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
