--- a/SuperZapatos/SuperZapatos.csproj
+++ b/SuperZapatos/SuperZapatos.csproj
@@ -197,6 +197,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="HttpClient\" />
     <Folder Include="Views\Create\" />
   </ItemGroup>
   <ItemGroup>
