--- a/Modelos/Modelos.csproj
+++ b/Modelos/Modelos.csproj
@@ -41,9 +41,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Articles.cs" />
+    <Compile Include="Error.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stores.cs" />
     <Compile Include="ViewModel\articlesViewModel.cs" />
+    <Compile Include="ViewModel\errorViewModel.cs" />
     <Compile Include="ViewModel\storesViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
