Se revisa nombres en controlador ruta y vista

--- a/SuperZapatos/SuperZapatos.csproj
+++ b/SuperZapatos/SuperZapatos.csproj
@@ -164,8 +164,8 @@
     </Content>
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\Create.cshtml" />
+    <Content Include="Views\Articles\Index.cshtml" />
+    <Content Include="Views\Articles\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -198,8 +198,8 @@
     <None Include="Service References\SR_Articles\ArticleService2.xsd">
       <SubType>Designer</SubType>
     </None>
-    <Content Include="Views\Home\Delete.cshtml" />
-    <Content Include="Views\Home\Edit.cshtml" />
+    <Content Include="Views\Articles\Delete.cshtml" />
+    <Content Include="Views\Articles\Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -209,7 +209,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Create\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
